--- a/ui.css
+++ b/ui.css
@@ -45,6 +45,7 @@ input {
   margin-top: 4px;
   padding: 16px 12px;
   width: 100%;
+  height: 100%;
   border-radius: 4px;
   outline: none;
   border: 0;
@@ -52,30 +53,16 @@ input {
   background-color: var(--figma-color-bg-secondary);
   box-shadow: inset 0 0 0 1px var(--figma-color-bg-tertiary);
 }
-input[type="range"] {
-  appearance: none;
-}
-input[type="range"]::-webkit-slider-runnable-track {
-  background-color: var(--figma-color-bg-secondary);
-  border-radius: 100px;
-  height: 8px;
-}
-input[type="range"]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  background-color: #24cc85;
-  border-radius: 100px;
-  height: 20px;
-  width: 20px;
-  margin-top: -6px;
-  box-shadow: 0 0px 0px 0 #32323200, inset 0 0 0 2px #fff;
-}
-input[type="range"]::-webkit-slider-thumb:hover {
-  box-shadow: 0 4px 4px 0 #32323215, inset 0 0 0 2px #fff;
-}
 
 input:focus {
   border: 0;
   box-shadow: inset 0 0 0 2px #24cc85;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 button {
   cursor: pointer;
