--- a/ui.css
+++ b/ui.css
@@ -1,6 +1,24 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");
+/* body {
+  background: linear-gradient(-45deg, #e6007a, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 12s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+} */
 h2 {
   color: var(--figma-color-text);
+  /* color: white; */
   font-family: "Inter";
   font-weight: 400;
   font-size: 120%;
